# defineutils

./: LICENSE  README.md  pyproject.toml  requirements.txt
definehtml/: __init__.py  __main__.py  definehtml.py
tests/: define.xml  test_definehtml.py  test_validate.py
validate/: __init__.py  __main__.py  validate.py
validate/schema/cdisc-define-2.1/: define-enumerations.html  define-enumerations.xsd
