[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "defineutils"
version = "0.1.1"
description = "CDISC Define-XML v2.1 utilities"
readme = "README.md"
authors = [{ name = "Sam Hume", email = "swhume@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["define.xml", "Define-XML", "CDISC"]
dependencies = [
    "elementpath>=5.0.4",
    "lxml >= 6.0.1",
    "xmlschema >= 4.1.0",
    'tomli; python_version < "3.11"',
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/swhume/defineutils"

[tool.setuptools]
packages = ["definehtml", "validate"]

[tool.setuptools.package-data]
# Include non-Python files needed at runtime (schemas, XSL)
"definehtml" = ["define2-1.xsl", "define2-1.xsl.LICENSE"]
"validate" = [
  "schema/cdisc-arm-1.0/*.xsd",
  "schema/cdisc-define-2.1/*.xsd",
  "schema/cdisc-define-2.1/*.html",
  "schema/cdisc-odm-1.3.2/*.xsd",
  "schema/core/*.xsd"
]

[tool.setuptools.exclude-package-data]
"*" = ["tests/*", "tests"]